<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Bem vindo ao EducRA!</string>
    <string name="app_name">EducRA</string>
    <string name="title_act_cad_objeto">Incluir Objeto</string>
    <string name="title_act_edt_objeto">Objeto</string>
    <string name="title_act_lista_objetos">Objetos</string>
    <string name="title_act_sobre">Sobre</string>
    <string name="title_aviso">Aviso</string>
    <string name="message_campos_invalidos_brancos">Há campos inválidos ou em branco!</string>
    <string name="lbl_ok">OK</string>
    <string name="message_conexao_criada_com_sucesso">Conexão criada com sucesso!</string>
    <string name="message_erro_salvar">Erro ao salvar.</string>
    <string name="message_erro_arquivo">Erro ao selecionar arquivo.</string>
    <string name="action_ok">OK</string>
    <string name="title_erro">Erro</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_descricao">Descrição</string>
    <string name="lbl_patt">Arquivo .patt</string>
    <string name="lbl_obj">Arquivo .obj</string>
    <string name="lbl_img">Imagem</string>
    <string name="lbl_marcador">Marcador</string>
    <string name="title_menu_ok">OK</string>
    <string name="title_menu_salvar">Salvar</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="title_menu_voltar">Voltar</string>
    <string name="title_menu_inicio_incluir">Incluir Objeto</string>
    <string name="title_menu_inicio_gerenciar">Gerenciar Objetos</string>
    <string name="chooser_title">Lorem ipsum</string>
    <string name="choose_file">Explorar</string>
    <string name="internal_storage">Internal storage</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="error_selecting_file">Erro ao selecionar arquivo</string>
    <string name="title_activity_inicio__nav">Inicio_Nav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Opções</string>
    <string name="title_activity_inicio_nav">EducRA</string>
    <string name="title_activity_act_sobre">Sobre</string>
</resources>
