<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContentActCadObjeto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.artoolkit.ar.samples.QuiRA.ActCadObjeto"
    tools:showIn="@layout/act_cad_objeto">

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_nome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtNome"
        app:layout_constraintRight_toRightOf="@+id/txtNome"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_descricao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtNome"
        app:layout_constraintRight_toRightOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtDescricao"
        app:layout_constraintRight_toRightOf="@+id/txtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricao" />

    <TextView
        android:id="@+id/txtPatt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="14dp"
        android:text="@string/lbl_patt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtDescricao"
        app:layout_constraintRight_toRightOf="@+id/edtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao" />

    <EditText
        android:id="@+id/edtPatt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="@+id/txtPatt"
        app:layout_constraintRight_toRightOf="@+id/txtPatt"
        app:layout_constraintTop_toBottomOf="@+id/txtPatt" />


    <ImageButton
        android:id="@+id/btnPatt"
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/edtPatt"
        app:layout_constraintTop_toTopOf="@+id/edtPatt"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"
        />

    <TextView
        android:id="@+id/txtObj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_obj"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtPatt"
        app:layout_constraintRight_toRightOf="@+id/edtPatt"
        app:layout_constraintTop_toBottomOf="@+id/edtPatt" />


    <EditText
        android:id="@+id/edtObj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtObj"
        app:layout_constraintRight_toRightOf="@+id/txtObj"
        app:layout_constraintTop_toBottomOf="@+id/txtObj" />

    <ImageButton
        android:id="@+id/btnObj"
        android:layout_width="33dp"
        android:layout_height="44dp"
         app:layout_constraintTop_toTopOf="@+id/edtObj"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/edtObj"
        android:layout_marginLeft="0dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"/>


    <TextView
        android:id="@+id/txtImagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtObj"
        app:layout_constraintRight_toRightOf="@+id/edtObj"
        app:layout_constraintTop_toBottomOf="@+id/edtObj" />


    <EditText
        android:id="@+id/edtImagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtImagem"
        app:layout_constraintRight_toRightOf="@+id/txtImagem"
        app:layout_constraintTop_toBottomOf="@+id/txtImagem" />

    <ImageButton
        android:id="@+id/btnImagem"
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:text="+"
        app:layout_constraintTop_toTopOf="@+id/edtImagem"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/edtImagem"
        android:layout_marginLeft="0dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"/>

    <TextView
        android:id="@+id/txtMarcador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_marcador"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtImagem"
        app:layout_constraintRight_toRightOf="@+id/edtImagem"
        app:layout_constraintTop_toBottomOf="@+id/edtImagem" />


    <EditText
        android:id="@+id/edtMarcador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtMarcador"
        app:layout_constraintRight_toRightOf="@+id/txtMarcador"
        app:layout_constraintTop_toBottomOf="@+id/txtMarcador" />

    <ImageButton
        android:id="@+id/btnMarcador"
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@+id/edtMarcador"
        android:layout_marginLeft="-9dp"
        app:layout_constraintTop_toTopOf="@+id/edtMarcador"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"/>



</android.support.constraint.ConstraintLayout>
</ScrollView>