<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContentActEdtObjeto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.artoolkit.ar.samples.QuiRA.ActEdtObjeto"
    tools:showIn="@layout/act_edt_objeto">

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_nome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtNome"
        app:layout_constraintRight_toRightOf="@+id/txtNome"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_descricao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtNome"
        app:layout_constraintRight_toRightOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtDescricao"
        app:layout_constraintRight_toRightOf="@+id/txtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricao" />

    <TextView
        android:id="@+id/txtPatt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_patt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtDescricao"
        app:layout_constraintRight_toRightOf="@+id/edtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/edtPatt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="@+id/txtPatt"
        app:layout_constraintRight_toRightOf="@+id/txtPatt"
        app:layout_constraintTop_toBottomOf="@+id/txtPatt" />


    <ImageButton
        android:id="@+id/btnPatt"
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/edtPatt"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/edtPatt"
        android:layout_marginBottom="1dp" />

    <TextView
        android:id="@+id/txtObj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:text="@string/lbl_obj"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtPatt"
        app:layout_constraintRight_toRightOf="@+id/edtPatt"
        app:layout_constraintTop_toBottomOf="@+id/edtPatt" />


    <EditText
        android:id="@+id/edtObj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtObj"
        app:layout_constraintRight_toRightOf="@+id/txtObj"
        app:layout_constraintTop_toBottomOf="@+id/txtObj" />

    <ImageButton
        android:id="@+id/btnObj"
        android:layout_width="33dp"
        android:layout_height="44dp"
        app:layout_constraintLeft_toRightOf="@+id/edtObj"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/edtObj" />


    <TextView
        android:id="@+id/txtImagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edtObj"
        app:layout_constraintRight_toRightOf="@+id/edtObj"
        app:layout_constraintTop_toBottomOf="@+id/edtObj" />


    <EditText
        android:id="@+id/edtImagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintRight_toRightOf="@+id/txtImagem"
        app:layout_constraintLeft_toRightOf="@+id/imgVImagem"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtImagem" />

    <ImageButton
        android:id="@+id/btnImagem"
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@+id/edtImagem"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/edtImagem"
        android:layout_marginBottom="1dp" />

    <TextView
        android:id="@+id/txtMarcador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_marcador"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/imgVImagem"
        app:layout_constraintRight_toLeftOf="@+id/btnImagem"
        app:layout_constraintTop_toBottomOf="@+id/edtImagem" />
        />


    <EditText
        android:id="@+id/edtMarcador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintRight_toRightOf="@+id/txtMarcador"
        app:layout_constraintTop_toBottomOf="@+id/txtMarcador"
        app:layout_constraintLeft_toRightOf="@+id/imgVMarcador"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp" />

    <ImageButton
        android:id="@+id/btnMarcador"
        android:layout_width="33dp"
        android:layout_height="44dp"
        android:text="+"
        app:layout_constraintLeft_toRightOf="@+id/edtMarcador"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:src="@mipmap/ic_folder_open"
        tools:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/edtMarcador"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/btnImagem"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/imgVMarcador"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtMarcador"
        app:layout_constraintLeft_toLeftOf="@+id/txtMarcador"
        app:layout_constraintTop_toBottomOf="@+id/txtMarcador"
        app:srcCompat="@android:color/background_light"
        app:layout_constraintVertical_bias="0.285" />

    <ImageView
        android:id="@+id/imgVImagem"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@android:color/background_light"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtImagem"
        app:layout_constraintBottom_toBottomOf="@+id/edtImagem"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtImagem"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
</ScrollView>
